Motorcycle Collector Game

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <div class="header">
-	<h1>Crystal Collector</h1>
+	<h1>Motorcycle Collector</h1>
 </div><!--header end-->
 <br>
 <div class="mainsection">
@@ -52,13 +52,13 @@
 
 	<div id="crystals">
 		
-		<button class="btn btn-default"><img class="crystal-image" src="http://cdn.playbuzz.com/cdn/35910209-2844-45c0-b099-f4d82878d54f/00261fda-4062-4096-81fd-8cf96b9034e8.jpg" id="one" ></img></button>
+		<button class="btn btn-default"><img class="crystal-image" src="assets/image/cbr.jpg" id="one" ></img></button>
 
-		<button class="btn btn-default"><img class="crystal-image" src="http://cdn.playbuzz.com/cdn/35910209-2844-45c0-b099-f4d82878d54f/00261fda-4062-4096-81fd-8cf96b9034e8.jpg" id="two"></img></buttom>
+		<button class="btn btn-default"><img class="crystal-image" src="assets/image/Ducati.jpg" id="two"></img></buttom>
 
-		<button class="btn btn-default"><img class="crystal-image" src="http://cdn.playbuzz.com/cdn/35910209-2844-45c0-b099-f4d82878d54f/00261fda-4062-4096-81fd-8cf96b9034e8.jpg" id="three" ></img></button>
+		<button class="btn btn-default"><img class="crystal-image" src="assets/image/R6.jpg" id="three" ></img></button>
 
-		<button class="btn btn-default"><img class="crystal-image" src="http://cdn.playbuzz.com/cdn/35910209-2844-45c0-b099-f4d82878d54f/00261fda-4062-4096-81fd-8cf96b9034e8.jpg" id="four" ></img></button>
+		<button class="btn btn-default"><img class="crystal-image" src="assets/image/Aprilia.jpeg" id="four" ></img></button>
 
 	</div><!--crystal end-->
 	
